# duckdb-processor-cli

./: .gitignore  .gradio_session.json  ANALYST_EXAMPLES.md  CHANGELOG.md  FORMATTER_EXAMPLES.md  PKG-INFO  QUICKSTART.md  README.md  SOURCES.txt  build.bat  duck_export_csv.csv  duck_export_json.json  duck_export_xlsx.xlsx  duckdb_processor-1.0.0-py3-none-any.whl  entry_points.txt  gradio_app.py  install.bat  main.py  pyproject.toml  requires.txt  run.bat  run.sh  sample_data.csv  sql_patterns.json  test_data.csv  test_duckdb_internals.py  test_duckdb_issue.py  top_level.txt
.claude/: settings.json
.moai/: manifest.json
.moai/project/: structure.md
analysts_plugins/: new_analysis_module.py  test234.py  top50.py  기명-top50.py  상위100.py
analysts_plugins/vdn_compare/: config.json  plugin.py
duckdb_processor/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  detection.py  loader.py  parsing.py  processor.py  repl.py  utils.py
duckdb_processor/analysts/: __init__.py  _template.py  advanced_sql_patterns.py  basic_patterns.py  business_metrics.py  data_quality.py  demo.py  python_advanced_analytics.py  python_ml_prep.py  python_patterns.py  sample_data_demo.py  sample_data_sql_examples.py  sql_cohort_funnel.py  (+2 more)
plan/: convert-vdn-compare-to-plugin_implementation_plan.md  memory-opt_implementation_plan.md  vdn-comparison_implementation_plan.md
tests/: test_accessibility.py  test_characterization_cli.py  test_characterization_processor.py  test_e2e_ui.py  test_formatters.py  test_integration.py  test_report_builder_e2e.py  test_ui_accessibility.py
(+106 files in other folders)
