[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckdb_processor"
version = "1.0.0"
description = "Structured CSV data analysis toolkit powered by DuckDB"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.9",
    "pandas>=2.0",
    "rich>=13.7.0",  # @MX:NOTE: Terminal formatting library (REQ-001, REQ-004)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
export = [
    "openpyxl>=3.0.0",  # Excel export
    "pyarrow>=10.0.0",  # Parquet export
]
ui = [
    "gradio>=4.0.0",
    "sqlparse>=0.5.0",
]

[project.scripts]
duckdb-processor = "duckdb_processor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["duckdb_processor*"]

[tool.setuptools.package-data]
duckdb_processor = ["analysts/**/*.py"]
